--- a/TrylmaClient/pom.xml
+++ b/TrylmaClient/pom.xml
@@ -25,6 +25,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.gaixie.json</groupId>
+          <artifactId>json</artifactId>
+          <version>1.0.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
