Check if starting field is in target triangle and if one of the player has won.

--- a/TrylmaServer/pom.xml
+++ b/TrylmaServer/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>socketServer</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>Trylma</name>
+  <name>socketServer</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -45,6 +45,18 @@
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.0.2</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>socketServer.TrylmaServer</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
