--- a/TrylmaServer/pom.xml
+++ b/TrylmaServer/pom.xml
@@ -31,6 +31,13 @@
       <version>1.0.0</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <!-- needs extra dependencies: objenesis & hamcrest -->
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.0-rc1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
