--- a/TrylmaClient/pom.xml
+++ b/TrylmaClient/pom.xml
@@ -25,6 +25,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.2.0</version>
+      <scope>test</scope>
+    </dependency>
       <dependency>
           <groupId>org.gaixie.json</groupId>
           <artifactId>json</artifactId>
