--- a/TrylmaServer/pom.xml
+++ b/TrylmaServer/pom.xml
@@ -66,7 +66,7 @@
             <archive>
               <manifest>
                 <addClasspath>true</addClasspath>
-                <mainClass>socketServer.TrylmaServer</mainClass>
+                <mainClass>socketServer.Trylma</mainClass>
               </manifest>
             </archive>
           </configuration>
